# ratemate

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
ratemate/: __init__.py  ratelim.py
tests/: test_ratelim.py
